2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/editenv.c (grub_util_create_envblk_file): Use grub_util_rename.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (create_envblk_file): More from here ...
	* util/editenv.c (grub_util_create_envblk_file): ... to here.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c (grub_guess_root_devices):
	canonicalize file name before doing the rest.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/osdep/hostfile_windows.h: Add missing ftello for
	mingw32.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Define grub_util_is_directory/regular/special_file and
	use OS-dependent versions rather than to rely on stat().

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c: Move backend part to ...
	* util/mkimage.c: ... here.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Allow compilation with mingw64 albeit with warnings due to lack of
	%llx/%llu.

	* grub-core/gnulib/msvc-inval.c: Use __cdecl rather than cdecl.
	* grub-core/lib/posix_wrap/wchar.h: Define wint_t.
	* grub-core/lib/posix_wrap/wctype.h: Define wctype_t.
	* include/grub/osdep/hostfile_windows.h: Don't define fseeko/ftello
	on mingw64.
	* include/grub/types.h: Allow sizeof (long) != sizeof (void *).

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove leftover references to some of the system headers.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/geli.c (grub_util_get_geli_uuid): Close handle after
	read.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c: Use grub_util_fd_strerror instead
	of strerror.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Split out blocklist retrieving from setup.c to
	grub-core/osdep/blocklist.c and add windows implementation since
	generic version doesn't work on NTFS on Windows due to aggressive
	unflushable cache.
